--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -1,6 +1,9 @@
 .container {
   height: calc(100vh - 250px);
-  background-color: #9d68cfd5;
+  border: 0;
+  border-bottom: 0.1px;
+  border-color: black;
+  border-style: groove;
   overflow: hidden;
 }
 
@@ -26,6 +29,18 @@
   width: 100vw;
   height: 100%;
   position: relative;
+}
+
+.textContainer {
+  display: flex;
+  text-align: center;
+  flex-direction: column;
+  padding: 5px 15%;
+}
+
+.browse {
+  display: flex;
+  padding: 20px 10px;
 }
 
 @media screen and (min-width: 721px) {
