--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -22,20 +22,21 @@
   display: flex;
   width: 300vw;
   height: 60%;
-  transition: all 0.5s ease-in-out;
 }
 
 .imgContainer {
-  width: 100vw;
+  width: 50%;
   height: 100%;
   position: relative;
 }
 
 .textContainer {
   display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
   flex-direction: column;
-  padding: 5px 15%;
+  padding: 5px 31%;
 }
 
 .browse {
