--- a/styles/MovieCard.module.css
+++ b/styles/MovieCard.module.css
@@ -1,3 +1,21 @@
 .container {
   width: 22%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  text-align: left;
+  padding: 20px;
+  cursor: pointer;
+}
+
+.title {
+  font-size: 20px;
+  font-weight: 700;
+}
+
+.genre {
+  font-weight: 500;
+}
+
+.description {
 }
