--- a/styles/MovieList.module.css
+++ b/styles/MovieList.module.css
@@ -1,19 +1,28 @@
 .container {
+  padding: 20px 10px;
   display: flex;
   flex-direction: column;
-  padding: 20px 10px;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
 }
 
 .title {
+  width: 100%;
+  text-align: left;
+  padding: 5px 8%;
 }
 
 .description {
   font-size: 18px;
-  width: 70%;
+  width: 100%;
+  text-align: left;
+  padding: 5px 8%;
 }
 
 .wrapper {
   display: flex;
+  flex-wrap: wrap;
   align-items: center;
   justify-content: center;
   width: 100%;
