--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,10 +1,84 @@
 .container {
+  height: calc(100vh - 640px);
+  background-color: #222;
+  display: flex;
+}
+
+.item {
+  flex: 1;
+  position: relative;
+  display: flex;
+  align-items: baseline;
+}
+
+.item:last-child {
+  flex: 2;
+  padding: 50px;
+  justify-content: space-between;
+}
+
+.card {
+  flex: 1;
+  padding: 0 20px;
+}
+
+.card:first-child {
+  margin-top: -20px;
+  margin-right: 80px;
+}
+
+.title {
+  font-size: 18px;
+  color: #b7903c;
+}
+
+.link {
+  color: lightgray;
+}
+
+.logo {
+  font-size: 24px;
+  color: #b7903c;
+}
+
+.logoDescription {
+  color: rgb(211, 211, 211);
+}
+
+@media screen and (max-width: 480px) {
+  .container {
+    height: auto;
+    text-align: center;
+  }
+  .item:first-child {
+    display: none;
+  }
+
+  .item {
+    flex-direction: column;
+  }
+
+  .title {
+    font-size: 30px;
+  }
+
+  .link {
+    font-size: 20px;
+  }
+}
+
+/* 
+.container {
   display: flex;
   flex-direction: column;
   padding: 20px 10px;
 }
 
-.title {
+.logoText {
+  font-size: 24px;
+  font-weight: 800;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 .description {
@@ -20,3 +94,4 @@
 .footerItem {
   width: 7%;
 }
+*/
