--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,7 +1,7 @@
 .container {
   height: 100px;
   padding: 0px 50px;
-  background-color: #9d68cf;
+  background-color: rgb(58, 56, 56);
   display: flex;
   align-items: center;
   justify-content: space-between;
