--- a/styles/Footer.module.css
+++ b/styles/Footer.module.css
@@ -1,7 +1,8 @@
 .container {
-  height: calc(100vh - 640px);
+  height: calc(100vh - 600px);
   background-color: #222;
   display: flex;
+  overflow: hidden;
 }
 
 .item {
@@ -45,7 +46,13 @@
   color: rgb(211, 211, 211);
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 1050px) {
+  .item:first-child {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 715px) {
   .container {
     height: auto;
     text-align: center;
@@ -56,14 +63,12 @@
 
   .item {
     flex-direction: column;
+    text-align: center;
+    align-items: center;
   }
 
-  .title {
-    font-size: 30px;
-  }
-
-  .link {
-    font-size: 20px;
+  .card:first-child {
+    margin-left: 15%;
   }
 }
 
