--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,6 +6,11 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+body {
+  overflow-x: hidden;
+  background-color: black;
+}
+
 a {
   color: inherit;
   text-decoration: none;
@@ -14,3 +19,13 @@ a {
 * {
   box-sizing: border-box;
 }
+
+/* Might be needed to hide scrollbar on different browsers. Removes vertical, so I won't use unless there's no other way.
+* {
+  box-sizing: border-box;
+  -ms-overflow-style: none;
+}
+::-webkit-scrollbar {
+  display: none;
+}
+*/
