--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,4 +1,112 @@
 .container {
+  font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
+  background-color: rgb(58, 56, 56);
+  overflow: hidden;
+}
+
+.menuIcon .menu {
+  display: none;
+  color: white;
+  font-size: 35px;
+  cursor: pointer;
+}
+
+.closed {
+  display: none;
+  cursor: pointer;
+  color: white;
+  justify-content: flex-start;
+  width: 100%;
+}
+
+.closed .close {
+  font-size: 25px;
+}
+
+.slider,
+.ul {
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  transition: 1s ease;
+
+  /* background-color: red; */
+}
+
+.li {
+  margin-block: 0.1rem;
+  margin-inline: 2rem;
+  list-style: none;
+}
+
+.slider,
+.ul,
+.li,
+.a {
+  font-size: 20px;
+  font-weight: bolder;
+  text-decoration: none;
+  color: white;
+}
+
+.name {
+  color: #b7903c;
+}
+
+@media (max-width: 900px) {
+  .menuIcon .menu {
+    display: block;
+    color: white;
+    font-size: 35px;
+    cursor: pointer;
+  }
+
+  .closed {
+    display: flex;
+  }
+
+  .slider {
+    position: fixed;
+    min-width: 100%;
+    height: 100vh;
+    top: -100%;
+    transition: 1s ease;
+
+    /* background-color: red; */
+  }
+
+  .slider.active {
+    top: 0;
+    transition: 1s ease;
+  }
+
+  .ul {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .li {
+    margin-block: 2.5rem;
+    list-style: none;
+  }
+
+  .slider,
+  .ul,
+  .li,
+  .a {
+    font-size: 20px;
+    color: white;
+    text-decoration: none;
+  }
+}
+
+.name {
+}
+
+/* 
+.container {
   height: 100px;
   padding: 0px 50px;
   background-color: rgb(58, 56, 56);
@@ -89,3 +197,4 @@
     flex: 3;
   }
 }
+*/
