first version of order page done, excluding animations for now. More responsive design.

--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -98,6 +98,12 @@
   }
 }
 
+@media screen and (max-width: 900px) {
+  .arrowContainer {
+    bottom: -5%;
+  }
+}
+
 @media screen and (max-width: 800px) {
   .textContainer {
     font-size: 14px;
