--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -38,20 +38,37 @@
   margin-block: 0.1rem;
   margin-inline: 2rem;
   list-style: none;
+  opacity: 0.8;
+}
+
+.li:hover {
+  color: white;
+  opacity: 1;
 }
 
 .slider,
 .ul,
 .li,
 .a {
-  font-size: 20px;
+  font-size: 16px;
   font-weight: bolder;
   text-decoration: none;
   color: white;
 }
 
-.name {
+.logo {
+  display: flex;
+  font-size: 22px;
+  align-self: center;
   color: #b7903c;
+}
+
+.cart {
+  display: flex;
+  align-items: center;
+  border: 2px ridge white;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 
 @media (max-width: 900px) {
@@ -60,24 +77,24 @@
     color: white;
     font-size: 35px;
     cursor: pointer;
+    height: 60px;
   }
-
+  /* 
   .closed {
     display: flex;
   }
-
+*/
   .slider {
     position: fixed;
     min-width: 100%;
     height: 100vh;
-    top: -100%;
+    left: -100%;
+    top: 0;
     transition: 1s ease;
-
-    /* background-color: red; */
   }
 
   .slider.active {
-    top: 0;
+    left: 0;
     transition: 1s ease;
   }
 
@@ -85,6 +102,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: -20px;
   }
 
   .li {
@@ -100,9 +118,6 @@
     color: white;
     text-decoration: none;
   }
-}
-
-.name {
 }
 
 /* 
