--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -1,7 +1,8 @@
 .container {
   display: flex;
   padding: 50px;
-  color: white;
+  color: black;
+  background-color: white;
 }
 
 .left {
@@ -12,25 +13,40 @@
   flex: 1;
 }
 
-.imgContainer {
-  width: 100px;
-  height: 100px;
-  position: relative;
-}
-
 .table {
   width: 100%;
-  border-spacing: 20px;
+  text-align: left;
+  margin-bottom: 50px;
 }
 
-.title {
-  color: #b7903c;
-  font-weight: 700;
+.statusRow {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
 }
 
-.total {
-  font-weight: 500;
-  width: 90%;
+.done {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.inProgress {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.undone {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  opacity: 0.3;
+}
+
+.undone .checkedIcon,
+.inProgress .checkedIcon {
+  display: none;
 }
 
 .wrapper {
@@ -39,7 +55,9 @@
   justify-content: space-between;
   width: 90%;
   max-height: 300px;
-  background-color: rgb(36, 36, 36);
+  color: rgb(0, 0, 0);
+  border: 1px solid black;
+  background-color: rgb(255, 255, 255);
   padding: 50px;
   padding-top: 10px;
 }
