--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -1,5 +1,6 @@
 .container {
   height: calc(100vh - 120px);
+  position: relative;
   padding-top: 18px;
   padding-bottom: 20px;
   border: 0;
@@ -12,10 +13,15 @@
 .arrowContainer {
   position: absolute;
   top: 0;
-  bottom: 12%;
+  bottom: 25%;
   margin: auto;
   cursor: pointer;
   z-index: 2;
+  opacity: 0.8;
+}
+
+.arrowContainer:hover {
+  opacity: 1;
 }
 
 .wrapper {
@@ -87,6 +93,7 @@
 
   .textContainer {
     padding: 3em 25%;
+    font-size: 18px;
   }
 
   .arrowContainer {
@@ -94,20 +101,23 @@
     height: 10px;
     right: 19em;
     left: 13em;
-    bottom: -13%;
-  }
-}
-
-@media screen and (max-width: 900px) {
-  .arrowContainer {
     bottom: -5%;
   }
 }
 
 @media screen and (max-width: 800px) {
+  .container {
+    height: calc(100vh - 50px);
+  }
   .textContainer {
-    font-size: 14px;
+    font-size: 18px;
     padding: 4em 25%;
+  }
+}
+
+@media screen and (max-width: 660px) {
+  .container {
+    height: calc(100vh + 120px);
   }
 }
 
