--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -102,12 +102,13 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: -20px;
+    margin-top: -25px;
   }
 
   .li {
     margin-block: 2.5rem;
     list-style: none;
+    border-bottom: 1px solid white;
   }
 
   .slider,
