--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -69,3 +69,10 @@
   background-color: black;
   cursor: not-allowed;
 }
+
+@media screen and (max-width: 1050px) {
+  .container {
+  }
+  .table {
+  }
+}
