--- a/styles/Product.module.css
+++ b/styles/Product.module.css
@@ -1,6 +1,7 @@
 .container {
   height: calc(100vh - 100px);
   display: flex;
+  align-items: center;
   color: white;
 }
 
@@ -18,15 +19,16 @@
 }
 
 .imgContainer {
-  width: 80%;
-  height: 80%;
+  width: 70vh;
+  height: 70vh;
   position: relative;
 }
 
 .options {
   display: flex;
-  justify-content: space-between;
-  width: 40%;
+  justify-content: center;
+  gap: 15px;
+  width: 280px;
   cursor: pointer;
 }
 
@@ -39,14 +41,17 @@
   font-weight: 500;
 }
 
+.description {
+}
+
 .platform {
   display: flex;
   font-size: 14px;
   padding: 0 5px;
-  border-radius: 10px;
-  background-color: rgb(36, 36, 36);
   color: #b7903c;
   font-weight: 700;
+  align-items: center;
+  justify-content: center;
 }
 
 .quantity {
@@ -61,4 +66,38 @@
   color: white;
   background-color: black;
   cursor: pointer;
+}
+
+@media (max-width: 1000px) {
+  .container {
+    height: auto;
+    flex-direction: column;
+    text-align: center;
+    margin-top: 20px;
+    font-size: large;
+  }
+  .imgContainer {
+    width: 70vh;
+    height: 70vh;
+  }
+
+  .options {
+    width: 120px;
+    flex-direction: column;
+    justify-content: center;
+    margin: auto;
+  }
+
+  .platform {
+    font-size: 16px;
+  }
+
+  .description {
+  }
+
+  .quantity,
+  .button {
+    height: 50px;
+    padding: 10px 20px;
+  }
 }
