--- a/styles/ShoppingCart.module.css
+++ b/styles/ShoppingCart.module.css
@@ -51,3 +51,68 @@
   background-color: black;
   cursor: pointer;
 }
+
+@media screen and (max-width: 820px) {
+  .container {
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+  }
+  .table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .trTitle {
+    display: none;
+  }
+
+  .tr {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 20px;
+  }
+
+  .imgContainer {
+    width: 35vw;
+    height: 35vw;
+  }
+
+  .title,
+  .total {
+    font-size: 22px;
+  }
+
+  .platform,
+  .price,
+  .quantity {
+    font-size: 18px;
+  }
+
+  .price::before {
+    content: "Price: ";
+  }
+
+  .quantity::before {
+    content: "Quantity: ";
+  }
+
+  .total::before {
+    content: "Total: ";
+  }
+
+  .wrapper {
+    width: 100%;
+  }
+
+  .totalTextTitle {
+    font-size: 22px;
+  }
+
+  .button {
+  }
+}
