replaced static movie data with props. Using useState in product id page to correctly display movie price, also  when choosing  platform option and quantity.

--- a/styles/MovieCard.module.css
+++ b/styles/MovieCard.module.css
@@ -18,6 +18,13 @@
   color: #b7903c;
 }
 
+.price {
+  font-size: 20px;
+  font-weight: 500;
+  color: white;
+  padding-bottom: 15px;
+}
+
 .genre {
   font-size: 20px;
   font-weight: 500;
