paypal payment implementation. Adding async handler functions to orders api files simliar to the ones in products api

--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -51,6 +51,20 @@
   background-color: black;
   cursor: pointer;
 }
+.paymentMethods {
+  margin-top: 10px;
+  display: flex;
+  flex-direction: column;
+}
+
+.payButton {
+  padding: 10px 5px;
+  cursor: pointer;
+  margin-bottom: 5px;
+  background-color: black;
+  color: white;
+  font-weight: bold;
+}
 
 @media screen and (max-width: 820px) {
   .container {
