error was syntax related, fixed by adding curly brackets to both orderdetails params. Also added/changed some styling options for orderdetails comp and product page.

--- a/styles/MovieCard.module.css
+++ b/styles/MovieCard.module.css
@@ -5,17 +5,22 @@
   justify-content: center;
   text-align: left;
   padding: 20px;
-  cursor: pointer;
 }
 
-.header {
-  color: #b7903c;
+.image {
+  cursor: pointer;
 }
 
 .title {
   font-size: 22px;
   font-weight: 800;
   color: #b7903c;
+  cursor: pointer;
+}
+
+.title:hover {
+  color: white;
+  opacity: 1;
 }
 
 .price {
