--- a/styles/Cart.module.css
+++ b/styles/Cart.module.css
@@ -21,6 +21,7 @@
 .table {
   width: 100%;
   border-spacing: 20px;
+  text-align: center;
 }
 
 .title {
@@ -37,7 +38,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  width: 90%;
+  width: 100%;
   max-height: 300px;
   background-color: rgb(36, 36, 36);
   padding: 50px;
@@ -66,7 +67,7 @@
   font-weight: bold;
 }
 
-@media screen and (max-width: 820px) {
+@media screen and (max-width: 900px) {
   .container {
     flex-direction: column;
     padding: 20px;
@@ -115,12 +116,18 @@
     content: "Quantity: ";
   }
 
+  .platform::before {
+    content: "Platform: ";
+  }
+
   .total::before {
     content: "Total: ";
   }
 
   .wrapper {
     width: 100%;
+    align-items: center;
+    justify-content: center;
   }
 
   .totalTextTitle {
