--- a/styles/Navbar.module.css
+++ b/styles/Navbar.module.css
@@ -1,7 +1,10 @@
 .container {
   font-family: "Franklin Gothic Medium", "Arial Narrow", Arial, sans-serif;
   background-color: rgb(58, 56, 56);
+  position: sticky;
   overflow: hidden;
+  top: 0;
+  z-index: 1030;
 }
 
 .menuIcon .menu {
