--- a/styles/Admin.module.css
+++ b/styles/Admin.module.css
@@ -29,3 +29,22 @@
 .button:last-child {
   background-color: red;
 }
+
+@media screen and (max-width: 1260px) {
+  .container {
+    flex-direction: column;
+    padding: 20px;
+    text-align: center;
+  }
+  .table {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .imgContainer {
+    width: 35vw;
+    height: 35vw;
+  }
+}
