--- a/styles/Carousel.module.css
+++ b/styles/Carousel.module.css
@@ -69,7 +69,25 @@
   line-height: 27px;
 }
 
-.browse {
+.info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.infoButton {
+  padding: 10px;
+  margin: 20px;
+  background-color: #b7903c;
+  width: 150px;
+  border-radius: 10px;
+  color: white;
+  font-weight: 700;
+  font-size: 14px;
+  text-align: center;
+
+  cursor: pointer;
 }
 
 @media screen and (min-width: 721px) {
