--- a/styles/Order.module.css
+++ b/styles/Order.module.css
@@ -1,8 +1,8 @@
 .container {
   display: flex;
   padding: 50px;
-  color: black;
-  background-color: white;
+  color: white;
+  background-color: rgb(0, 0, 0);
 }
 
 .left {
